acvm-repo/msgpack_tagged/tests/compile_fail/missing_tag_attribute.stderr
error: missing `#[tag(N)]` attribute — every field needs an explicit tag, `#[tag(skip)]`, or be `PhantomData<_>`
  --> tests/compile_fail/missing_tag_attribute.rs:10:5
   |
10 |     b: bool, // missing #[tag(N)] — error
   |     ^^^^^^^
